discussion/kv_engine/174256/174256_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix DefragmenterTest.MaxDefragValueSize test on big endian

Change-Id: Ie857808ed9a08be29c1cba5c09dd47c040466b7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vivian Kong
Date: 2022-05-17 14:26:28.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Vivian Kong
Date: 2022-05-17 14:28:29.000000000
Message: 
Patch Set 2:

(2 comments)
File Comment: /PATCHSET_LEVEL -> Sorry for the delay, I have created a review for changes in platform: https://review.couchbase.org/c/platform/+/174947
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-17 14:39:42.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46179/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/defragmenter.cc(222): error C2664: "bool cb::_ArenaMalloc<cb::JEArenaMalloc>::getProperty(const char *,size_t &)": cannot convert argument 2 from "unsigned int" to "size_t &" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17531/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:222:50: error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int" [clang-diagnostic-error]
    cb::ArenaMalloc::getProperty("arenas.nbins", nbins);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/cb_arena_malloc.h:284:55: note: passing argument to parameter "value" here
    static bool getProperty(const char* name, size_t& value) {
                                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17531/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38794/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38794/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7239/ : FAILURE

Compile error at [2022-05-17T14:32:32.050Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: cannot bind non-const lvalue reference of type ?size_t&? {aka ?long unsigned int&?} to an rvalue of type ?size_t? {aka ?long unsigned int?}
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7239/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18506/ : FAILURE

Compile error at [2022-05-17T14:30:15.075Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18506/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7141/ : FAILURE

Compile error at [2022-05-17T14:33:33.184Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7141/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19642/ : FAILURE

Compile error at [2022-05-17T14:38:21.365Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: cannot bind non-const lvalue reference of type ?size_t&? {aka ?long unsigned int&?} to an rvalue of type ?size_t? {aka ?long unsigned int?}
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19294/ : FAILURE

Compile error at [2022-05-17T14:37:33.308Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: cannot bind non-const lvalue reference of type ?size_t&? {aka ?long unsigned int&?} to an rvalue of type ?size_t? {aka ?long unsigned int?}
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20320/ : FAILURE

Compile error at [2022-05-17T14:36:34.391Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20320/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27699/ : FAILURE

Compile error at [2022-05-17T14:38:49.136Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/defragmenter.cc:222:50:
error: non-const lvalue reference to type "size_t" (aka "unsigned long") cannot bind to a value of unrelated type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27699/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16553/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
